--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,29 @@ form{
     gap: 15px;
     margin-top: 20px;
 }
+
+.btn-sm{
+    margin: 0 40%;
+    font-size: 13px;
+    padding: 2px 10px;
+    /* background-color: #212529; */
+    border: none;
+}
+
+.icons{
+    display: flex;
+    margin: 0 38%;
+    cursor: pointer;
+    padding-bottom: 20px;
+}
+
+.card-img-top{
+    width: 100%;
+    height: 200px;
+}
+
+.inner{
+    display: flex;
+    align-items: center;
+}
+
