--- a/src/App.css
+++ b/src/App.css
@@ -44,4 +44,11 @@ form{
     display: flex;
     align-items: center;
 }
-
+.card{
+    position: relative;
+}
+.card span{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
